feat: add warm theme

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
     gosling.embed(
         document.getElementById('root'),
         {
-            theme: goslingTheme.Themes.test,
+            theme: goslingTheme.Themes.warm,
             // "title": "Gosling Theme",
             // "subtitle": "This example shows gosling visualization with theme",
             "layout": "linear",
