--- a/demo/index.html
+++ b/demo/index.html
@@ -16,14 +16,16 @@
     <script crossorigin type="text/javascript"
         src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.4/dist/gosling.js"></script>
+    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.7/dist/gosling.js"></script>
     <script crossorigin type="text/javascript" src="dist/index.js"></script>
 </body>
 <script>
+    console.log(`Gosling v${gosling.version}`);
+    console.log('goslingTheme.Themes', goslingTheme.Themes);
+
     gosling.embed(
         document.getElementById('root'),
         {
-            theme: goslingTheme.Themes.warm,
             // "title": "Gosling Theme",
             // "subtitle": "This example shows gosling visualization with theme",
             "layout": "linear",
@@ -290,6 +292,9 @@
                     ]
                 }
             ]
+        },
+        {
+            theme: goslingTheme.Themes.warm
         }
     );
 </script>
