--- a/demo/index.html
+++ b/demo/index.html
@@ -17,10 +17,11 @@
         src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
     <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.7/dist/gosling.js"></script>
-    <script crossorigin type="text/javascript" src="dist/index.js"></script>
+    <script crossorigin type="text/javascript" src="dist/gosling-theme.js"></script>
 </body>
 <script>
     console.log(`Gosling v${gosling.version}`);
+    console.log(`goslingTheme`, goslingTheme);
     console.log('goslingTheme.Themes', goslingTheme.Themes);
 
     gosling.embed(
@@ -294,7 +295,7 @@
             ]
         },
         {
-            theme: goslingTheme.Themes.warm
+            theme: goslingTheme.Themes.washu
         }
     );
 </script>
