--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,14 @@
     <select name="demo" onChange="demo(this)">
         <option value='light'>light</option>
         <option value='dark'>dark</option>
+        <option value='ensembl'>ensembl</option>
+        <option value='excel'>excel</option>
+        <option value='ggplot'>ggplot</option>
+        <option value='google'>google</option>
+        <option value='igv'>igv</option>
+        <option value='jbrowse'>jbrowse</option>
+        <option value='ucsc'>ucsc</option>
+        <option value='warm'>warm</option>
         <option value='washu'>washu</option>
         <!-- Add More ... -->
     </select>
