feat: show more proper demo example and add more theme components

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,14 +3,25 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="lightgray" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="lightgray" /> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css">
 </head>
 
 <body
     style="font-family: 'Roboto Condensed', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-    <h1>Gosling Theme</h1>
+    <script crossorigin type="text/javascript" src="example-1.js"></script>
+    <script crossorigin type="text/javascript" src="example-2.js"></script>
+    <script crossorigin type="text/javascript" src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin type="text/javascript"
+        src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
+    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.9/dist/gosling.js"></script>
+    <script crossorigin type="text/javascript" src="dist/gosling-theme.js"></script>
+
+    <!-- UI Components -->
+    <b>Select Theme: </b>
     <select name="demo" onChange="demo(this)">
         <option value='light'>light</option>
         <option value='dark'>dark</option>
@@ -25,13 +36,7 @@
         <option value='washu'>washu</option>
         <!-- Add More ... -->
     </select>
-    <div id="root" />
-    <script crossorigin type="text/javascript" src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin type="text/javascript"
-        src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.7/dist/gosling.js"></script>
-    <script crossorigin type="text/javascript" src="dist/gosling-theme.js"></script>
+    <div id="root" style="margin-top: 20px" />
 </body>
 <script>
     console.log(`Gosling v${gosling.version}`);
@@ -41,6 +46,7 @@
     Object.keys(goslingTheme.Themes)
 
     let selectedDemo = 'light';
+    const exampleSpec = [example1, example2][0]; // we could change this to show different example
     updateDemo();
     
     function demo(event) {
@@ -51,280 +57,17 @@
     }
 
     function updateDemo() {
+        console.log(selectedDemo, goslingTheme.Themes[selectedDemo]);
         gosling.embed(
             document.getElementById('root'),
+            JSON.parse(JSON.stringify(exampleSpec)),
             {
-                // "title": "Gosling Theme",
-                // "subtitle": "This example shows gosling visualization with theme",
-                "layout": "linear",
-                "arrangement": "vertical",
-                "centerRadius": 0.8,
-                "xDomain": { "chromosome": "1", "interval": [1, 3000500] },
-                "views": [
-                    {
-                        "id": "view-1",
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                                    "type": "multivec",
-                                    "row": "sample",
-                                    "column": "position",
-                                    "value": "peak",
-                                    "categories": ["sample 1", "sample 2", "sample 3", "sample 4"],
-                                    "binSize": 4
-                                },
-                                "mark": "rect",
-                                "x": { "field": "start", "type": "genomic", "axis": "top" },
-                                "xe": { "field": "end", "type": "genomic" },
-                                "row": { "field": "sample", "type": "nominal", "legend": true },
-                                "color": { "field": "peak", "type": "quantitative", "legend": true },
-                                "tooltip": [
-                                    { "field": "start", "type": "genomic", "alt": "Start Position" },
-                                    { "field": "end", "type": "genomic", "alt": "End Position" },
-                                    {
-                                        "field": "peak",
-                                        "type": "quantitative",
-                                        "alt": "Value",
-                                        "format": ".2"
-                                    },
-                                    { "field": "sample", "type": "nominal", "alt": "Sample" }
-                                ],
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    },
-                    {
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                                    "type": "multivec",
-                                    "row": "sample",
-                                    "column": "position",
-                                    "value": "peak",
-                                    "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
-                                },
-                                "mark": "bar",
-                                "x": { "field": "position", "type": "genomic", "axis": "top" },
-                                "y": { "field": "peak", "type": "quantitative" },
-                                "row": { "field": "sample", "type": "nominal" },
-                                "color": { "field": "sample", "type": "nominal", "legend": true },
-                                "tooltip": [
-                                    { "field": "position", "type": "genomic", "alt": "Position" },
-                                    {
-                                        "field": "peak",
-                                        "type": "quantitative",
-                                        "alt": "Value",
-                                        "format": ".2"
-                                    },
-                                    { "field": "sample", "type": "nominal", "alt": "Sample" }
-                                ],
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    },
-                    {
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                                    "type": "multivec",
-                                    "row": "sample",
-                                    "column": "position",
-                                    "value": "peak",
-                                    "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
-                                },
-                                "mark": "bar",
-                                "x": { "field": "position", "type": "genomic", "axis": "top" },
-                                "y": { "field": "peak", "type": "quantitative", "grid": true },
-                                "color": { "field": "sample", "type": "nominal", "legend": true },
-                                "tooltip": [
-                                    { "field": "position", "type": "genomic", "alt": "Position" },
-                                    {
-                                        "field": "peak",
-                                        "type": "quantitative",
-                                        "alt": "Value",
-                                        "format": ".2"
-                                    },
-                                    { "field": "sample", "type": "nominal", "alt": "Sample" }
-                                ],
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    },
-                    {
-                        "alignment": "overlay",
-                        "data": {
-                            "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                            "type": "multivec",
-                            "row": "sample",
-                            "column": "position",
-                            "value": "peak",
-                            "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
-                        },
-                        "x": { "field": "position", "type": "genomic", "axis": "top" },
-                        "y": { "field": "peak", "type": "quantitative" },
-                        "row": { "field": "sample", "type": "nominal" },
-                        "color": { "field": "sample", "type": "nominal", "legend": true },
-                        "tracks": [
-                            { "mark": "line" },
-                            {
-                                "mark": "point",
-                                "size": { "field": "peak", "type": "quantitative", "range": [0, 2] }
-                            }
-                        ],
-                        "tooltip": [
-                            { "field": "position", "type": "genomic", "alt": "Position" },
-                            {
-                                "field": "peak",
-                                "type": "quantitative",
-                                "alt": "Value",
-                                "format": ".2"
-                            },
-                            { "field": "sample", "type": "nominal", "alt": "Sample" }
-                        ],
-                        "width": 600,
-                        "height": 130
-                    },
-                    {
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                                    "type": "multivec",
-                                    "row": "sample",
-                                    "column": "position",
-                                    "value": "peak",
-                                    "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
-                                },
-                                "mark": "point",
-                                "x": { "field": "position", "type": "genomic", "axis": "top" },
-                                "y": { "field": "peak", "type": "quantitative" },
-                                "row": { "field": "sample", "type": "nominal" },
-                                "size": { "field": "peak", "type": "quantitative" },
-                                "color": { "field": "sample", "type": "nominal", "legend": true },
-                                "opacity": { "value": 0.5 },
-                                "tooltip": [
-                                    { "field": "position", "type": "genomic", "alt": "Position" },
-                                    {
-                                        "field": "peak",
-                                        "type": "quantitative",
-                                        "alt": "Value",
-                                        "format": ".2"
-                                    },
-                                    { "field": "sample", "type": "nominal", "alt": "Sample" }
-                                ],
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    },
-                    {
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                                    "type": "multivec",
-                                    "row": "sample",
-                                    "column": "position",
-                                    "value": "peak",
-                                    "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
-                                },
-                                "mark": "point",
-                                "x": { "field": "position", "type": "genomic", "axis": "top" },
-                                "y": { "field": "peak", "type": "quantitative", "grid": true },
-                                "size": { "field": "peak", "type": "quantitative" },
-                                "color": { "field": "sample", "type": "nominal", "legend": true },
-                                "opacity": { "value": 0.5 },
-                                "tooltip": [
-                                    { "field": "position", "type": "genomic", "alt": "Position" },
-                                    {
-                                        "field": "peak",
-                                        "type": "quantitative",
-                                        "alt": "Value",
-                                        "format": ".2"
-                                    },
-                                    { "field": "sample", "type": "nominal", "alt": "Sample" }
-                                ],
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    },
-                    {
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://server.gosling-lang.org/api/v1/tileset_info/?d=cistrome-multivec",
-                                    "type": "multivec",
-                                    "row": "sample",
-                                    "column": "position",
-                                    "value": "peak",
-                                    "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
-                                },
-                                "mark": "area",
-                                "x": { "field": "position", "type": "genomic", "axis": "top" },
-                                "y": { "field": "peak", "type": "quantitative" },
-                                "row": { "field": "sample", "type": "nominal" },
-                                "color": { "field": "sample", "type": "nominal", "legend": true },
-                                "stroke": { "value": "white" },
-                                "strokeWidth": { "value": 0.5 },
-                                "tooltip": [
-                                    { "field": "position", "type": "genomic", "alt": "Position" },
-                                    {
-                                        "field": "peak",
-                                        "type": "quantitative",
-                                        "alt": "Value",
-                                        "format": ".2"
-                                    },
-                                    { "field": "sample", "type": "nominal", "alt": "Sample" }
-                                ],
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    },
-                    {
-                        "tracks": [
-                            {
-                                "data": {
-                                    "url": "https://raw.githubusercontent.com/sehilyi/gemini-datasets/master/data/circos-segdup-edited.txt",
-                                    "type": "csv",
-                                    "chromosomeField": "c2",
-                                    "genomicFields": ["s1", "e1", "s2", "e2"]
-                                },
-                                "mark": "withinLink",
-                                "x": {
-                                    "field": "s1",
-                                    "type": "genomic",
-                                    "domain": { "chromosome": "1", "interval": [103900000, 104100000] }
-                                },
-                                "xe": { "field": "e1", "type": "genomic" },
-                                "x1": {
-                                    "field": "s2",
-                                    "type": "genomic",
-                                    "domain": { "chromosome": "1" }
-                                },
-                                "x1e": { "field": "e2", "type": "genomic" },
-                                "color": { "field": "s1", "type": "nominal" },
-                                "stroke": { "value": "black" },
-                                "strokeWidth": { "value": 0.5 },
-                                "opacity": { "value": 0.2 },
-                                "width": 600,
-                                "height": 130
-                            }
-                        ]
-                    }
-                ]
-            },
-            {
+                // margin: 30,
+                // padding: 0,
+                // border: '1px dashed gray',
                 theme: goslingTheme.Themes[selectedDemo]
             }
-        );
+        );        
     }
 </script>
 
