--- a/demo/index.html
+++ b/demo/index.html
@@ -17,13 +17,13 @@
     <script crossorigin type="text/javascript"
         src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.9/dist/gosling.js"></script>
+    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.10/dist/gosling.js"></script>
     <script crossorigin type="text/javascript" src="dist/gosling-theme.js"></script>
 
     <!-- UI Components -->
     <b>Select Theme: </b>
     <select name="demo" onChange="demo(this)">
-        <option value='light'>light</option>
+        <option value='light' selected>light</option>
         <option value='dark'>dark</option>
         <option value='ensembl'>ensembl</option>
         <option value='excel'>excel</option>
