--- a/demo/index.html
+++ b/demo/index.html
@@ -1,79 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="lightgray" /> -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css">
+  <meta charset="utf-8" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="lightgray" /> -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css"/>
 </head>
 
 <body
-    style="font-family: 'Roboto Condensed', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-    <script crossorigin type="text/javascript" src="example-1.js"></script>
-    <script crossorigin type="text/javascript" src="example-2.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.10/dist/gosling.js"></script>
+  style="font-family: 'Roboto Condensed', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"
+>
+  <script crossorigin type="text/javascript" src="example-1.js"></script>
+  <script crossorigin type="text/javascript" src="example-2.js"></script>
+  <script crossorigin type="text/javascript" src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin type="text/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script crossorigin type="text/javascript" src="https://unpkg.com/pixi.js@5/dist/pixi.js"></script>
+  <script crossorigin type="text/javascript" src="https://unpkg.com/gosling.js@0.8.10/dist/gosling.js"></script>
 
-    <!-- UI Components -->
-    <b>Select Theme: </b>
-    <select id="demo">
-        <option value='light' selected>light</option>
-        <option value='dark'>dark</option>
-        <option value='ensembl'>ensembl</option>
-        <option value='excel'>excel</option>
-        <option value='ggplot'>ggplot</option>
-        <option value='google'>google</option>
-        <option value='igv'>igv</option>
-        <option value='jbrowse'>jbrowse</option>
-        <option value='ucsc'>ucsc</option>
-        <option value='warm'>warm</option>
-        <option value='washu'>washu</option>
-        <!-- Add More ... -->
-    </select>
-    <div id="root" style="margin-top: 20px" />
+  <!-- UI Components -->
+  <b>Select Theme: </b>
+  <select id="demo">
+      <option value="light" selected>light</option>
+      <option value="dark">dark</option>
+      <option value="ensembl">ensembl</option>
+      <option value="excel">excel</option>
+      <option value="ggplot">ggplot</option>
+      <option value="google">google</option>
+      <option value="igv">igv</option>
+      <option value="jbrowse">jbrowse</option>
+      <option value="ucsc">ucsc</option>
+      <option value="warm">warm</option>
+      <option value="washu">washu</option>
+      <!-- Add More ... -->
+  </select>
+  <div id="root" style="margin-top: 20px" />
 </body>
 
-<script type="module">
+  <script type="module">
     import * as goslingTheme from "gosling-theme";
 
     console.log(`Gosling v${gosling.version}`);
     console.log(`goslingTheme`, goslingTheme);
-    console.log('goslingTheme.Themes', goslingTheme.Themes);
+    console.log("goslingTheme.Themes", goslingTheme.Themes);
 
-    Object.keys(goslingTheme.Themes)
+    Object.keys(goslingTheme.Themes);
 
     const exampleSpec = [example1, example2][0]; // we could change this to show different example
 
     function update(name) {
-        const theme = goslingTheme.Themes[name];
-		console.log({ name, theme });
-        gosling.embed(
-            document.getElementById("root"),
-            JSON.parse(JSON.stringify(exampleSpec)),
-            {
-                // margin: 30,
-                // padding: 0,
-                // border: '1px dashed gray',
-                theme,
-            }
-        );
+      const theme = goslingTheme.Themes[name];
+      console.log({ name, theme });
+      gosling.embed(
+        document.getElementById("root"),
+        JSON.parse(JSON.stringify(exampleSpec)),
+        {
+          // margin: 30,
+          // padding: 0,
+          // border: '1px dashed gray',
+          theme,
+        }
+      );
     }
 
     update("light");
-    document
-		.getElementById("demo")
-		.addEventListener("change", (event) => {
-			const themeName = event.target.value;
-			if (goslingTheme.IsThereTheme(themeName)) {
-				update(event.target.value); // e.g., "washu"
-			} else {
-				console.error(`${themeName} is not a supported theme`);
-			}
-		});
-</script>
-
+    document.getElementById("demo").addEventListener("change", (event) => {
+      const themeName = event.target.value;
+      if (goslingTheme.IsThereTheme(themeName)) {
+        update(event.target.value); // e.g., "washu"
+      } else {
+        console.error(`${themeName} is not a supported theme`);
+      }
+    });
+  </script>
 </html>
